@@ -72,6 +72,7 @@ character/character.xml
 character/paperdoll.xml
 character/reputation.xml
 character/currency.xml
+character/title.xml
 character/talents.xml
 character/professions.xml
 character/character.lua
